--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.2",
+    "@next-auth/firebase-adapter": "^0.0.2-canary.207",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -47,7 +48,7 @@
     "eslint-config-next": "^14.0.1",
     "lucide-react": "^0.291.0",
     "next": "^14.0.1",
-    "next-auth": "^4.24.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "^18.2.0",
