--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "0.2.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.0.0",
     "eslint": "8.48.0",
